# cmake_example_self

./: .gitignore  README.md
01-basic/A-hello-cmake/: CMakeLists.txt  main.cpp
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/include/: hello.h
01-basic/B-hello-headers/src/: hello.cpp  main.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/src/: hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/include/shared/: hello.h
01-basic/D-shared-library/src/: hello.cpp  main.cpp
01-basic/E-installing/: CMakeLists.txt  cmake-examples.conf
01-basic/E-installing/src/: hello.cpp  main.cpp
01-basic/F-build-type/: CMakeLists.txt  main.cpp
01-basic/G-compile-flags/: CMakeLists.txt  main.cpp
01-basic/H-third-party-library/: CMakeLists.txt  main.cpp
01-basic/I-compiling-with-clang/: CMakeLists.txt  main.cpp
01-basic/J-building-with-ninja/: CMakeLists.txt  main.cpp
01-basic/K-imported-targets/: README.md
02-sub-projects/A-basic/: CMakeLists.txt
02-sub-projects/A-basic/subbinary/: CMakeLists.txt  main.cpp
02-sub-projects/A-basic/sublibrary1/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary1/include/sublib1/: sublib1.h
02-sub-projects/A-basic/sublibrary1/src/: sublib1.cpp
02-sub-projects/A-basic/sublibrary2/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary2/include/sublib2/: sublib2.h
03-code-generation/protobuf/: CMakeLists.txt  main.cpp  test.proto  test1.proto
